--- a/templates/game.xml
+++ b/templates/game.xml
@@ -1,3 +1,3 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
-  <a class="game__back" href="/">Back</a>
+  <a class="game__back" href="#">Back</a>
 </fest:template>
