--- a/templates/main.xml
+++ b/templates/main.xml
@@ -1,6 +1,6 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
   <h1 class="main__game-title">Pong</h1>
   <h2 class="main__title">Main Menu</h2>
-  <a class="main__scores" href="/scores">Score Board</a>
-  <a class="main__game" href="/game">Game</a>
+  <a class="main__scores" href="#scores">Score Board</a>
+  <a class="main__game" href="#game">Game</a>
 </fest:template>
