--- a/templates/scores.xml
+++ b/templates/scores.xml
@@ -1,5 +1,8 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
   <h1 class="scores__game-title">Pong</h1>
   <h2 class="scores__title">Score Board</h2>
+  <table class="scores__table">
+	<tr><th class="scores__table-name-title">Name</th><th class="scores__table-score-title">Score</th></tr>
+  </table>
   <a class="scores__back" href="#">Back</a>
 </fest:template>
