Game scene was added.

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -1,6 +1,7 @@
 @color-dark-gray: #44444e;
 @color-gray: #888;
 @color-light-gray: #eee;
+@color-white-gray: #fdfdfd;
 @color-white: #fff;
 
 .font-size-m () {
