--- a/src/less/style.less
+++ b/src/less/style.less
@@ -6,8 +6,43 @@ body {
 }
 
 .game {
+	/* .game__scene */
+	&__scene {
+		position: relative;
+		margin: 0 auto;
+		overflow: hidden;
+		background: @color-light-gray;
+		
+		/* .game__scene-target */
+		&-target {
+			/* .game__scene-target-placeholder */
+			&-placeholder {
+				position: absolute;
+				background: rgba(255, 200, 200, .5);
+			}
+		}
+		
+		/* .game__scene-score */
+		&-score {
+			position: absolute;
+			top: 10px;
+			right: 15px;
+			text-align: right;
+			.font-accidental();
+
+			/* .game__scene-score-value */
+			&-value {
+				.font-size-l();
+			}
+		}
+	}
+
+	/* .game__back */
 	&__back {
 		.button-back();
+		position: absolute;
+		left: 0;
+		top: 0;
 	}
 }
 
